--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-player": "^2.10.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-tsparticles": "^2.1.3",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
+    "tsparticles": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
