--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/core": "^2.0.0-beta.199",
+    "@tiptap/extension-color": "^2.0.0-beta.199",
+    "@tiptap/extension-link": "^2.0.0-beta.199",
+    "@tiptap/extension-text-style": "^2.0.0-beta.199",
+    "@tiptap/react": "^2.0.0-beta.199",
+    "@tiptap/starter-kit": "^2.0.0-beta.199",
+    "axios": "^1.3.3",
     "merge-options": "^3.0.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.7.1",
+    "react-images-uploading": "^3.1.7",
     "react-jinke-music-player": "^4.24.2",
     "react-player": "^2.10.1",
     "react-redux": "^8.0.2",
@@ -20,6 +29,7 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.58.1",
     "styled-components": "^5.3.5",
     "tsparticles": "^2.1.3",
     "web-vitals": "^2.1.4"
